# tree-sitter-yara

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.yara  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-yara.h  tree-sitter-yara.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yara/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYaraTests/: TreeSitterYaraTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
