[package]
name = "tree-sitter-yara"
description = "Tree-sitter plugin for the Yara language."
version = "0.0.1"
authors = ["egibs <evan@egibs.xyz>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yara"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/egibs/tree-sitter-yara"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
